Minor refinements to Game